Refs #139198 - Horizontal card - fix spacing.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -544,6 +544,20 @@ div.ui.modal {
   }
 }
 
+@media only screen and (min-width: 600px) {
+  div.search-result {
+    div.col-left {
+      padding-right: 3em;
+    }
+
+    div.col-right {
+      img {
+        padding-right: 0px !important;
+      }
+    }
+  }
+}
+
 .answers-list {
   margin-top: 3em;
 
